# StackMaster

./: LICENSE.txt  MANIFEST.in  README.md  changes.txt  description.md  setup.cfg  setup.py
Matlab/: ST.m  acfstack.m  linstack.m  nrootstack.m  pwstack.m  rafstack.m  robuststack.m  runtests.m  seisstack.m  selectivestack.m
notebooks/: plot_stackmasterlogo.ipynb  plot_stackpylogo.ipynb
stackmaster/: core.py  utils.py
stackpy/: core.py
