# Inside of setup.cfg
[metadata]
name = stackpy
description = A collection of methods for data stacking
long_description = file: README.md
keywords = data stacking
license = MIT license
classifiers=
      Development Status :: 4 - Beta
      License :: OSI Approved :: MIT License
      Programming Language :: Python :: 3.7