# Inside of setup.cfg
[metadata]
name = stackmaster
description = A collection of methods for data stacking
long_description = file: description.md
keywords = data stacking
license = MIT license
classifiers=
      Development Status :: 4 - Beta
      License :: OSI Approved :: MIT License
      Programming Language :: Python :: 3.7
